# CarbonPass

./: .env.example  .gitignore  10. PoC Engineering Blueprint - CBAM Data-Pack Engine.md  11. Engineer Setup & Claude Code Kickoff.md  12_kickoff_session_handoff.md  13_sprint1_report.md  14_scope_extension.md  15_evidence_dossier.md  16_waste_extension.md  CarbonPass - Final Submission Proposal (PHIT 2026).md  README.md  pyproject.toml
data/: prices.yaml
data/cbam_official/: benchmarks.xlsx
data/ef/: grid_ef.yaml  moenv_coefficients.json
data/official_refs/: moea_grid_ef_2025.md
docs/: 00_session_handoff.md  09_master_proposal.md  10_poc_blueprint.md  11_setup_kickoff.md  12_kickoff_session_handoff.md  13_sprint1_report.md  14_scope_extension.md  15_evidence_dossier.md  17_final_proposal_source.tex  18_claims_audit_and_refined_pitch.md  20_master_handoff.md  21_sprint2_blueprint_kickoff.md  FACTS.md  PROJECT.md  SOURCES.md
materials/: f1.tex  f3.tex  f4.tex  f5.tex  main.lot  main.out  main.tex  p1.tex  p3.tex  prop_main.aux  prop_main.out  prop_main.tex  prop_main.toc  s1.tex  s3.tex  sec3.tex  sec4.tex  sec5.tex  study_main.aux  study_main.tex  winners.txt
schema/: activity_data.schema.json  benchmark_row.schema.json  cbam_template_map.yaml
scripts/: atlas_scan.py  degrade_corpus.py  inspect_template.py  line_simulator.py  make_mock_corpus.py  pull_moenv_ef.py  verify_workbook_recalc.py  vlm_bakeoff.py  waste_scan.py
tests/: test_api.py  test_backstop.py  test_benchmark.py  test_fixlist.py  test_rules_units.py  test_scheduler.py  test_waste.py
(+78 files in other folders)
