[project]
name = "carbonpass"
version = "0.1.0"
description = "Local-first AI that turns a Taiwanese fastener SME's documents into a verifier-ready EU CBAM Communication Template (Module 1 PoC)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "jsonschema>=4.22",
    "numpy>=1.26",
    "ortools>=9.10",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "reportlab>=4.2",
    "pypdfium2>=4.30",
    "pillow>=10.3",
    "docling>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[project.scripts]
carbonpass = "carbonpass.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carbonpass"]

[tool.pytest.ini_options]
testpaths = ["tests"]
